# Voice-transcript

./: .gitignore  CLAUDE.md  README.md  buildozer.spec  config.example.json  main_android.py  migration.md  migration_progress.md  openai_transcribe.py  openai_transcribe_gui.py  openai_transcribe_translate.py  realtime_transcribe.py  requirements.txt  voice_transcript.spec
VoiceTT/: package.json  pnpm-lock.yaml  vite.config.ts
VoiceTT/src-tauri/: Cargo.toml  tauri.conf.json
VoiceTT/src-tauri/resources/python/: soniox_realtime.py
VoiceTT/src-tauri/src/: app_state.rs  config.rs  conversation_store.rs  error.rs  lib.rs  main.rs  python.rs  state.rs  store.rs
VoiceTT/src-tauri/src/audio/: mod.rs
VoiceTT/src-tauri/src/engines/: mod.rs
VoiceTT/src-tauri/src/services/: mod.rs
electron/: .gitignore  AGENTS.md  Gemini.md  Qwen3-ASR.md  Qwen3-ASR.py  README.md  i18n.js  index.html  main.js  main_backup_before_condition.txt  main_head_tmp.js  main_js_head_backup.txt  main_utf8.txt  media-transcribe-renderer.js  media-transcribe.html  media_transcribe.py  modles.py  openai-stream.py  out_py.txt  package-lock.json  package.json  preload.js  renderer.js  requirements.txt  settings.html  settings.js  settings_backup.js  test-media-transcribe.js  transcribe_service.py  transcribe_service_backup.py  voice-input.html  voice-input.js
transcribe_translate/: README.md  config.example.json  gpt4o_transcribe.py  openai_transcribe_translate.py  requirements.txt
translate_android/: APK_BUILD_GUIDE.md  APK_READY.md  Dockerfile  INSTALL_GUIDE.md  QUICK_START.md  README.md  alternative_build.py  android_requirements.txt  build_android.sh  build_in_colab.ipynb  buildozer.spec  create_apk.py  (+6 more)
(+71 files in other folders)
